# ChatGenieVN

./: .ruff.toml  README.md  pyproject.toml
package/logger/: pyproject.toml
src/chatgenievn/: __init__.py
